--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
-sonar.projectKey=imagepush
+sonar.projectKey=azure-devops
 sonar.organization=yogenderj
 
 # This is the name and version displayed in the SonarCloud UI.
